<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/tv_userIdText"
        android:text="@string/user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"/>
    <TextView
        android:id="@+id/tv_userIdData"
        android:hint="@string/id_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/tv_dataIdText"
        android:text="@string/entry_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"/>
    <TextView
        android:id="@+id/tv_EntryIdData"
        android:hint="@string/entry_id_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

</LinearLayout>


<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_titleText"
            android:text="@string/titleString"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center_horizontal"
            />
    <TextView
        android:id="@+id/tv_titleData"
        android:textStyle="bold"
        android:hint="@string/nameOfTitle"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_bodyData"
        android:hint="@string/bodyText"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
    </LinearLayout>
